| Priyanshu | added two more links in T&C

--- a/locales/hi.json
+++ b/locales/hi.json
@@ -12,11 +12,11 @@
 	"Vakyansh: A crowdsourcing initiative for Indian languages": "वाक्यांश : भारतीय भाषाओं के लिए एक जन-संकुल स्रोत पहल",
 	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": "एक भाषा की पहचान का मॉडल, जो केवल भारतीय भाषाओं पर केंद्रित हो, उसके विकास के लिए विविध भारतीय आवाज़ों के विशाल डाटा संग्रह की ज़रूरत है। वाक्यांश भारतीय भाषाओं के विशाल डाटा संग्रह के लिए आपको आमंत्रण देता है कि आप इस क्रम में अपनी आवाज़ का योगदान दें।",
 	"Know More": "ज़्यादा जानें",
-	"We rely on your contributions": "हम योगदानों पर आश्रित हैं।",
+	"We rely on your contributions": "हम योगदानों पर आश्रित हैं",
 	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "बोली पहचान के मॉडल तैयार करने की कुंजी उन डेटा की विविधता में निहित है, जो आप विभिन्न राज्यों, बोलियों, लहजे, लिंग और आयु वर्ग में योगदान देकर हमें उपलब्ध कराते हैं। देश भर में इस विविधता की अहमियत, हमें अपनी भाषाओं को सशक्त बनाने में सामूहिक शक्ति देती है।",
-	"languages contributed": "भाषा का योगदान",
+	"languages contributed": "भाषाओं में योगदान",
 	"speakers contributed": "वक्ताओं का योगदान",
-	"hours recorded": "रिक़ॉर्ड के घंटे",
+	"hours recorded": "रिक़ॉर्ड किए घंटे",
 	"Top Languages": "मुख्य भाषाएं",
 	"By hours of data contributed": "घंटों के आंकड़ों के हिसाब से",
 	"By number of speakers": "वक्ताओं की संख्या के हिसाब से",
@@ -53,7 +53,7 @@
 	"This is where you come in.": "इस काम में हमें आपकी मदद की ज़रूरत है।",
 	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "आपके योगदान का हर पल एक बड़ा अंतर लाएगा और हमें अपने उद्देश्य के करीब पहुंचाएगा।",
 	"Select language": "भाषा का चुनाव करें",
-	"START RECORDING": "रिकॉर्डिंग शुरू करें",
+	"START RECORDING": "रिकॉर्ड करना शुरू करें",
 	"ABOUT THE ORGANISATION": "संगठन के बारे में",
 	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "एकस्टेप संगठन सभी भागीदारों को एक साथ लाता है और बड़े पैमाने पर जटिल सामाजिक समस्याओं को हल करने के लिए खुले बुनियादी ढाँचे, उपकरण और रूपरेखा का निर्माण करता है। हम खुले स्रोत के डिजिटल बुनियादी ढांचे का लाभ उठाते हुए ऐसा करते हैं, जिसे हमने सनबर्ड नाम दिया है और सोसिएटल प्लेटफार्म एप्रोच के साथ हम काम करते हैं।",
 	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "एकस्टेप एक गैर-लाभकारी संगठन है, जिसकी स्थापना रोहिणी, नंदन निलेकनी और शंकर मारुवाड़ा ने की है।",
@@ -71,8 +71,8 @@
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "रिकॉर्डिंग से पहले, दिए गए <b>संदेश को पढ़कर</b> प्रैक्टिस कर लें",
 	"Get started by clicking on <b>Record</b> button": "'रिकॉर्ड करें' बटन पर क्लिक करके शुरू करें",
 	"START": "शुरू",
-	"Error!!!": "एरर!!!",
-	"An unexpected error occured while processing your request. Please try after some time.": "आपके अनुरोध को प्रोसेस करते समय एक अनचाही गलती हुई। कृपया कुछ देर बाद दोबारा प्रयास करें।",
+	"Error!!!": "गड़बड़ी!!!",
+	"An unexpected error occured while processing your request. Please try after some time.": "आपके अनुरोध पर कार्रवाई करते समय एक अनपेक्षित गड़बड़ी हुई। कृपया कुछ समय बाद फिर से कोशिश करें।",
 	"Close": "बंद करें",
 	"Thank you for contributing!": "योगदान देने के लिए आपका धन्यवाद!",
 	"Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!": "आपके योगदान के कारण हम अपने लक्ष्य के कुछ <b><span id=\"user-contribution\">सेकेंड</span></b> और करीब पहुंच गए हैं!!!",
@@ -108,9 +108,9 @@
 	"Gender Contribution": "लिंग का योगदान",
 	"State Wise distribution": "राज्यवार ब्यौरा",
 	"Age Group Distribution": "आयु वर्ग का ब्यौरा",
-	"Oops": "ऊप्स",
-	"Page Not Found": "पेज नहीं मिल रहा",
-	"Looks like you have taken a wrong turn here": "लगता है आपने गलत तरीका चुन लिया है",
+	"Oops": "ओह",
+	"Page Not Found": "पेज नहीं मिला",
+	"Looks like you have taken a wrong turn here": "शायद आप यहां गलती से आ गए हैं",
 	"Click Here": "यहाँ क्लिक करें",
 	"to go back to home page": "अपने होम पेज पर जाने के लिए",
 	"Show All": "अन्य भाषाएं",
@@ -125,14 +125,14 @@
 	"hrs validated in": "%language में %hours घंटे की पुष्टि की गई",
 	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices.Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": "For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices.Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.",
 	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group.The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group.The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.",
-	"Incorrect": "ग़लत",
+	"Incorrect": "गलत",
 	"Correct": "सही",
 	"Skip": "छोड़ें",
 	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
 	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
 	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
 	"Replay": "फिर से प्ले करें",
-	"Pause": "पॉज",
+	"Pause": "रोकें",
 	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "रिकॉर्डिंग <span id=\"counter\"></span> सेकंड के बाद अपने आप बंद हो जाएगी",
 	"hours": "घंटे",
 	"minutes": "मिनट",
@@ -169,7 +169,7 @@
 	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "अपनी भाषा के लिए 100 घंटों का लक्ष्य हासिल करने में मदद करें। हमें पता है कि आप और भी बहुत कुछ कर सकते हैं!",
 	"Help your own language": "अपनी भाषा को उन्नत बनाने में मदद करें",
 	"Please test your <b>speakers</b>": "कृपया अपने <b>स्पीकर</b> चेक करें",
-	"Report": "शिकायत करें",
+	"Report": "रिपोर्ट करें",
 	"Report Content": "कॉन्टेंट की शिकायत करें",
 	"Help us understand what’s wrong with the sentence": "इस वाक्य क्या गलत है, इसे समझने में हमारी मदद करें",
 	"Offensive": "अपमानजनक",
@@ -180,7 +180,7 @@
 	"Hateful Political views, amplifying hate-speech etc.": "नफ़रत फ़ैलाने वाली राजनीतिक सोच, नफ़रत बढ़ाने वाली बोली आदि",
 	"Misinformation": "गलत जानकारी",
 	"Hearsay / Rumors, deliberate falsified facts etc.": "पाखंड / अफवाहें, जानबूझकर बताए गए झूठे तथ्य आदि",
-	"Thank You": "धन्यवाद",
+	"Thank You": "बहुत बहुत शुक्रिया",
 	"Your feedback helps us keep the portal relevant to you, we appreciate you taking time to leave feedback for us.": "आपकी प्रतिक्रिया हमें \"बोलो इंडिया\" को प्रासंगिक बनाए रखने में मदद करती है, प्रतिक्रिया छोड़ने के लिए हम आपकी सराहना करते हैं।",
 	"Speak": "बोलें",
 	"Validate What They Say": "जो लिखा है क्या वही कहा जा रहा है ?",
@@ -210,17 +210,21 @@
 	"SUBMIT": "सबमिट करें",
 	"Most data recorded for <span id=\"languageId\"></span>": "<span id=\"languageId\"></span> में सबसे ज़्यादा योगदान",
 	"Data recorded for <span id=\"languageChoiceId\"></span>": "<span id=\"languageChoiceId\"></span> के लिए डेटा रिकॉर्ड किया गया",
-	"Congratulations!!! You have completed this batch of sentences": "बढ़ाई हो! आपने अपनी आवाज़ में एक बैच का योगदान किया है!",
+	"Congratulations!!! You have completed this batch of sentences": "बधाई हो! आपने अपनी आवाज़ में एक बैच का योगदान किया है!",
 	"Please type here...": "कृपया यहाँ टाइप करें...",
 	"Failed to submit the feedback. Please try again.": "प्रतिक्रिया सबमिट करने में विफल। कृपया पुन: प्रयास करें।",
-	"Thank You for your valueable feedback": "आपके बहुमूल्य प्रतिक्रिया के लिए शुक्रिया",
-	"Your feedback helps us keep the initiative relevant, we appreciate you taking time to leave the feedback.": "आपकी प्रतिक्रिया हमें \"बोलो इंडिया\" को प्रासंगिक बनाए रखने में मदद करती है, प्रतिक्रिया छोड़ने के लिए हम आपकी सराहना करते हैं।",
-	"Back to Home": "वापिस होम पेज पर",
+	"Thank You for your valuable feedback": "आपके बहूमूल्य फ़ीडबैक के लिए धन्यवाद",
+	"Back to Home": "होम पेज पर वापस जाएं",
 	"Subject": "विषय",
 	"Description": "विवरण",
 	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.",
 	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.",
 	"social sharing text with rank": "मैंने https://boloindia.nplt.in पर भारत के लिए ओपन लैंग्वेज रिपॉज़िटरी बनाने में योगदान किया है। आप और मैं हमारी आवाज़ों का योगदान करके इस पहल में काफ़ी फ़र्क डाल सकते हैं जिससे मशीन को हमारी भाषा सीखने में मदद मिलती है। \"बोलो इंडिया\" पर हमारी %language भाषा का रैंक %rank है। अपनी भाषा को सशक्त बनाने में अपना योगदान देना चाहेंगे?",
 	"social sharing text without rank": "मैंने https://boloindia.nplt.in पर भारत के लिए ओपन लैंग्वेज रिपॉज़िटरी बनाने में योगदान किया है। आप और मैं हमारी आवाज़ों का योगदान करके इस पहल में काफ़ी फ़र्क डाल सकते हैं जिससे मशीन को हमारी भाषा सीखने में मदद मिलती है। अपनी भाषा को सशक्त बनाने में अपना योगदान देना चाहेंगे?",
-	"Select the language for voluntary contribution": "Select the language for voluntary contribution"
+	"Select the language for voluntary contribution": "Select the language for voluntary contribution",
+	"Please speak clearly": "Please speak clearly",
+	"Low/No Background Noise": "Low/No Background Noise",
+	"Background Noise Detected": "Background Noise Detected",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "आपका फ़ीडबैक बोलो इंडिया को आपके काम का ऐप्लिकेशन बनाए रखने में हमारी मदद करता है आपने अपना कीमती समय निकालकर फ़ीडबैक दिया, इसके लिए हम आपकी सराहना करते हैं",
+	"Congratulations! You have validated a batch of recordings!": "बधाई हो! आपके रिकॉर्डिंग के एक बैच की पुष्टि कर दी है।"
 }
