|Ramu| Add translations for Home page

--- a/locales/ta.json
+++ b/locales/ta.json
@@ -1,19 +1,67 @@
 {
-	"hrs recorded in":"", 
-	"hrs validated in":"",
-	"hours":"", 
-	"minutes":"", 
-	"seconds":"",
-	"Recording for 5 seconds":"", 
-	"Recording for 4 seconds":"", 
-	"Recording for 3 seconds":"", 
-	"Recording for 2 seconds":"", 
-	"Recording for 1 seconds":"", 
-	"Playingback Audio":"", 
-	"Playing":"", 
-	"Test Mic":"", 
-	"Test Speakers":"",
-	"Congratulations!!! You have completed this batch of sentences":"", 
-	"social sharing text with rank":"", 
-	"social sharing text without rank":""
+	"hrs recorded in": "%hours மணிநேரம் %language இல் பதிவு செய்யப்பட்டுள்ளது",
+	"hrs validated in": "%hours மணிநேரம் %language இல் சரிபார்க்கப்பட்டது",
+	"hours": "மணிநேரங்கள்",
+	"minutes": "நிமிடங்கள்",
+	"seconds": "",
+	"Recording for 5 seconds": "",
+	"Recording for 4 seconds": "",
+	"Recording for 3 seconds": "",
+	"Recording for 2 seconds": "",
+	"Recording for 1 seconds": "",
+	"Playingback Audio": "",
+	"Playing": "",
+	"Test Mic": "",
+	"Test Speakers": "",
+	"Congratulations!!! You have completed this batch of sentences": "",
+	"social sharing text with rank": "",
+	"social sharing text without rank": "",
+	"Language": "தமிழ்",
+	"Speech Recognition Models": "Speech Recognition Models",
+	"About Us": "எங்களை பற்றி",
+	"Select the language for voluntary contribution": "Select the language for voluntary contribution",
+	"Show All": "அனைத்தையும் காட்டு",
+	"Speak": "சொல்லவும்",
+	"Contribute Your Voice": "உங்கள் குரலில் பங்களிக்கவும்",
+	"Contribute your voice to create an open data repository of Indian languages": "இந்திய மொழிகளின் திறந்த தரவு களஞ்சியத்தை உருவாக்க உங்கள் குரலில் பங்களிக்கவும்",
+	"Listen": "கேட்கவும்",
+	"Validate What They Say": "அவர்கள் சொல்வதை சரிபார்க்கவும்",
+	"Help us by validating the recordings that others have contributed": "மற்றவர்கள் பங்களித்த குரல் மாதிரிகளை சரிபார்த்து எங்களுக்கு உதவுங்கள்",
+	"Bolo India: A crowdsourcing initiative for Indian languages": "போலோ இந்தியா: இந்திய  மொழிகளுக்கான  மக்களின் கூட்டு பங்களிப்பு  முயற்சி",
+	"India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.": "இந்திய மொழிகளில் பேச்சறிதல் பகுதியில்  இந்தியா தன்னிறைவை பெறுவது அவசியம். இதற்காக, இந்தியக் குரல்களின் திறந்த தரவு களஞ்சியத்தை நாங்கள் உருவாக்க விரும்புகிறோம். இந்த காரணத்திற்காக, உங்கள் குரலை தன்னார்வத்துடன் பங்களிப்பதற்காக போலோ இந்தியா உங்களை அழைக்கிறது",
+	"Know More": "மேலும் அறிய",
+	"We rely on your contributions": "உங்கள் பங்களிப்புகளை நாங்கள் சார்ந்திருக்கிறோம்",
+	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "பல மாநிலங்கள், பேச்சுவழக்குகள், உச்சரிப்புகள், பாலினம் மற்றும் வயது பிரிவுகள் மூலம் பேசப்படும் பலதரப்பட்ட தரவின் பன்முகத்தன்மையுடன் பேச்சறிதல் மாதிரிகளை உருவாக்குவதற்கு உங்கள் பங்களிப்பு அத்தியாவசியமானது.  நாடு எங்கிலும் உள்ள இந்த பன்முகத்தன்மையின் முக்கியத்துவம், நமது மொழிகளை மேம்படுத்துவதற்கான கூட்டு வலிமையை அளிக்கிறது.",
+	"languages contributed": "பங்களித்த மொழிகள்",
+	"speakers contributed": "பங்களித்த பேசியவர்கள் ",
+	"hours recorded": "பதிவு செய்யப்பட்ட மணிநேரம்",
+	"Top Languages": "முன்னணி மொழிகள்",
+	"By hours of data contributed": "தரவு பங்களிக்கப்பட்ட மணிநேரங்களின்படி",
+	"By number of speakers": "பேசியவர்களின் எண்ணிக்கையின்படி",
+	"VIEW ALL DETAILS": "எல்லா விவரங்களையும் காண்க",
+	"Hide details": "விவரங்களை மறை",
+	"Speaker Details": "பேசுபவர்களின் விவரங்கள்",
+	"All the fields are optional": "எல்லா புலங்களும் கட்டாயமற்றவை",
+	"Not You? Change User": "நீங்கள் அல்லவா? பயனரை மாற்றவும்",
+	"Username": "பயனர்பெயர்",
+	"Enter preferred username": "விருப்பமான பயனர்பெயரை உள்ளிடவும்",
+	"Username cannot be more than 12 characters": "Username cannot be more than 12 characters",
+	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
+	"Mother Tongue": "தாய் மொழி",
+	"Select Mother Tongue": "தாய்மொழியைத் தேர்ந்தெடுக்கவும்",
+	"Age Group": "வயது பிரிவு",
+	"Select Age Group": "வயதுக் பிரிவைத் தேர்ந்தெடுக்கவும்",
+	"Gender": "பாலினம்",
+	"Male": "ஆண்",
+	"Female": "பெண்",
+	"Others": "மற்றவர்",
+	"Transgender - He": "திருநங்கைகள் - அவன்",
+	"Transgender - She": "திருநங்கைகள் - அவள்",
+	"Rather Not Say": "சொல்வதை தவிர்க்கிறேன்",
+	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "நான் <a href=\"/terms-and-conditions\">விதிமுறைகளையும் நிபந்தனைகளையும்</a> படித்து ஒப்புக்கொள்கிறேன்",
+	"LET'S GO": "நாம் தொடங்கலாம்",
+	"Select Your Preferred Language": "உங்களுக்கு விருப்பமான மொழியைத் தேர்ந்தெடுக்கவும்",
+	"Terms & Conditions": "விதிமுறைகளும் நிபந்தனைகளும்",
+	"Privacy Policy": "தனியுரிமைக் கொள்கை",
+	"Feedback": "பின்னூட்டம்"
 }
