| Priyanshu | added translation for recording page for tamil

--- a/locales/ta.json
+++ b/locales/ta.json
@@ -4,16 +4,6 @@
 	"hours": "மணிநேரங்கள்",
 	"minutes": "நிமிடங்கள்",
 	"seconds": "",
-	"Recording for 5 seconds": "",
-	"Recording for 4 seconds": "",
-	"Recording for 3 seconds": "",
-	"Recording for 2 seconds": "",
-	"Recording for 1 seconds": "",
-	"Playingback Audio": "",
-	"Playing": "",
-	"Test Mic": "",
-	"Test Speakers": "",
-	"Congratulations!!! You have completed this batch of sentences": "",
 	"social sharing text with rank": "",
 	"social sharing text without rank": "",
 	"Language": "தமிழ்",
@@ -54,7 +44,6 @@
 	"Gender": "பாலினம்",
 	"Male": "ஆண்",
 	"Female": "பெண்",
-	"Others": "மற்றவர்",
 	"Transgender - He": "திருநங்கைகள் - அவன்",
 	"Transgender - She": "திருநங்கைகள் - அவள்",
 	"Rather Not Say": "சொல்வதை தவிர்க்கிறேன்",
@@ -63,5 +52,52 @@
 	"Select Your Preferred Language": "உங்களுக்கு விருப்பமான மொழியைத் தேர்ந்தெடுக்கவும்",
 	"Terms & Conditions": "விதிமுறைகளும் நிபந்தனைகளும்",
 	"Privacy Policy": "தனியுரிமைக் கொள்கை",
-	"Feedback": "பின்னூட்டம்"
+	"Feedback": "பின்னூட்டம்",
+	"Recording for 5 seconds": "5 விநாடிகளுக்கு பதிவு செய்யப்ப்டுகிறது",
+	"Recording for 4 seconds": "4 விநாடிகளுக்கு பதிவு செய்யப்ப்டுகிறது",
+	"Recording for 3 seconds": "3 விநாடிகளுக்கு பதிவு செய்யப்ப்டுகிறது",
+	"Recording for 2 seconds": "2 விநாடிகளுக்கு பதிவு செய்யப்ப்டுகிறது",
+	"Recording for 1 seconds": "1 விநாடிகளுக்கு பதிவு செய்யப்ப்டுகிறது",
+	"Playingback Audio": "ஆடியோவை மீண்டும் இயக்குகிறது",
+	"Playing": "இயங்குகிறது",
+	"Test Mic": "மைக்கை சோதிக்கவும்",
+	"Test Speakers": "ஒலிபெருக்கியை சோதிக்கவும்",
+	"Congratulations!!! You have completed this batch of sentences": "வாழ்த்துக்கள்! உங்கள் குரலில் ஒரு தொகுப்பை பங்களித்துள்ளீர்கள்!",
+	"Quick Tips": "உடனடி உதவிக்குறிப்புகள்",
+	"Please test your <b>Microphone</b>": "உங்கள் ஒலிவாங்கியை சோதிக்கவும்",
+	"Please test your <b>Speakers</b>": "உங்கள் ஒலிபெருக்கியை சோதிக்கவும்",
+	"Ensure there is <b>no background noise</b>": "பின்னணி இரைச்சல் இல்லை என்பதை உறுதிப்படுத்தவும்",
+	"Read once <b>before recording it</b>": "பதிவு செய்வதற்கு முன், ஒரு தரம் படிக்கவும்",
+	"Get started by clicking on <b>Record</b> button": "பதிவு பொத்தானைக் கிளிக் செய்து தொடங்கவும்",
+	"Report": "புகாரளிக்கவும்",
+	"Test your Microphone and Speakers": "உங்கள் ஒலிவாங்கி மற்றும் ஒலிபெருக்கிகளை சோதிக்கவும்",
+	"Please speak clearly": "Please speak clearly",
+	"Low/No Background Noise": "Low/No Background Noise",
+	"Background Noise Detected": "பின்னணி இரைச்சல் கண்டறியப்பட்டது",
+	"Let's get started!": "Let's get started!",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> விநாடிகளுக்குப் பிறகு பதிவு தானாகவே நின்றுவிடும்",
+	"Audio recording is too small. Please Re-record": "ஆடியோ பதிவு மிகவும் சிறியது. மீண்டும் பதிவுசெய்க",
+	"SKIP": "தவிர்",
+	"START RECORDING": "பதிவு செய்",
+	"STOP RECORDING": "பதிவு செய்வதை நிறுத்து",
+	"RE-RECORD": "மீண்டும் பதிவுசெய்",
+	"NEXT": "அடுத்தது",
+	"Report Content": "உள்ளடக்கத்தைப் பற்றி புகாரளிக்கவும்",
+	"Help us understand what’s wrong with the sentence": "வாக்கியத்தில் உள்ள தவறைப் புரிந்துகொள்ள எங்களுக்கு உதவுங்கள்",
+	"Offensive": "அவமதிப்பானது",
+	"Hurting sentiments of religion, community or abusive content etc.": "மதம், சமூக உணர்வுகளை புண்படுத்துகிற அல்லது திட்டுகிற மாதிரி உள்ளடக்கம் ஆகியவை",
+	"Prohibited Content": "தடைசெய்யப்பட்ட உள்ளடக்கம்",
+	"Hateful / Discriminatory / Vulgar language, drugs promotion etc.": "வெறுக்கத்தக்க / பாரபட்சமான / மோசமான மொழி, போதைமருந்துகள் ஊக்குவிப்பு போன்றவை.",
+	"Political Statement": "அரசியல் அறிக்கை",
+	"Hateful Political views, amplifying hate-speech etc.": "வெறுக்கத்தக்க அரசியல் கருத்துக்கள், வெறுப்புணர்வை அதிகரிக்கும் பேச்சுரை போன்றவை.",
+	"Misinformation": "தவறான தகவல்",
+	"Hearsay / Rumors, deliberate falsified facts etc.": "பாசாங்குத்தனம்/வதந்திகள், வேண்டுமென்றே பொய்யான உண்மைகள் போன்றவை.",
+	"Others": "மற்றவைகள்",
+	"Please specify the reason (Optional)": "காரணத்தைக் குறிப்பிடவும் (விரும்பினால்)",
+	"SUBMIT": "சமர்ப்பிக்கவும்",
+	"Thank You": "நன்றி",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "உங்கள் பின்னூட்டம் போலோ இந்தியாவை அர்த்தமுள்ளதாக வைத்திருக்க உதவுகிறது, பின்னூட்டத்தை வழங்க நேரம் ஒதுக்கிய உங்களை பாராட்டுகிறோம்.",
+	"Error!!!": "பிழை!!!",
+	"An unexpected error occured while processing your request. Please try after some time.": "உங்கள் வேண்டுகோளை நிறைவேற்ற முயன்ற போது எதிர்பாராத பிழை ஏற்பட்டது. சிறிது நேரம் கழித்து முயற்சிக்கவும்.",
+	"Close": "மூடு"
 }
