--- a/locales/ta.json
+++ b/locales/ta.json
@@ -99,5 +99,36 @@
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "உங்கள் பின்னூட்டம் போலோ இந்தியாவை அர்த்தமுள்ளதாக வைத்திருக்க உதவுகிறது, பின்னூட்டத்தை வழங்க நேரம் ஒதுக்கிய உங்களை பாராட்டுகிறோம்.",
 	"Error!!!": "பிழை!!!",
 	"An unexpected error occured while processing your request. Please try after some time.": "உங்கள் வேண்டுகோளை நிறைவேற்ற முயன்ற போது எதிர்பாராத பிழை ஏற்பட்டது. சிறிது நேரம் கழித்து முயற்சிக்கவும்.",
-	"Close": "மூடு"
+	"Close": "மூடு",
+	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.",
+	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.",
+	"India is a land of many languages, our digital strategy must reflect it.": "இந்தியா பல மொழிகள் பேசப்படும் நாடு், நமது டிஜிட்டல் வியூகம் அதை பிரதிபலிக்க வேண்டும்.",
+	"90% of India's population uses region languages to conduct their day-to-day activities.": "இந்தியாவின் 90% மக்கள் தங்கள் அன்றாட நடவடிக்கைகளை செய்ய பிராந்திய மொழிகளைப் பயன்படுத்துகின்றனர்.",
+	"As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.": "நிதி, கல்வி மற்றும் சமூக நடவடிக்கைகளுக்காக டிஜிட்டல் தளங்களை பயன்படுத்துபவர்கள் அதிகமாக-அதிகமாக, டிஜிட்டல் தளங்கள் இந்திய மொழிகளில் தடையின்றி செயல்பட வேண்டும்.",
+	"Help your own language": "உங்கள் சொந்த மொழியை முன்னேற்ற உதவுங்கள்",
+	"We need to build speech recognition technologies that are tuned for your language.  It must have high accuracy and understand the daily language and communications of people in your language.": "உங்கள் மொழிக்கு பொருந்துமாறு பேச்சறிதல் தொழில்நுட்பங்களை நாங்கள் உருவாக்க தேவை. இது அதிக துல்லியத்தன்மையைக் கொண்டிருக்க வேண்டும் மற்றும் உங்கள் மொழியில் பேசுபவர்களுக்கு அன்றாட மொழி மற்றும் சொல்லும் தகவல் புரியவேண்டும்.",
+	"Having open world class speech recognition in your language will enable a digital first model in your language in various sectors such as: education, healthcare and media.": "உங்கள் மொழியில் திறந்த உலகத்தரம் வாய்ந்த பேச்சறிதல்  தொழில்நுட்பம் இருப்பது கல்வி, உடல்நல பராமரிப்பு மற்றும் ஊடகம் போன்ற பல்வேறு துறைகளில் உங்கள் மொழியில் டிஜிட்டலில் முதல் மாதிரியை செயலாக்கும்.",
+	"The tools, utilities and models  proposed to be developed in your language will rely on open source contributions through Bolo India crowd sourcing platform": "உங்கள் மொழியில் உருவாக்க உத்தேசிக்கப்பட்ட கருவிகள், பயன்பாடுகள் மற்றும் மாதிரிகள் போலோ இந்தியா மக்களின் கூட்டு பங்களிப்பு தளத்தின் மூலம் திறந்த மூல பங்களிப்புகளை சார்ந்திருக்கும்",
+	"Crowd Sourcing & your contribution": "மக்களின் கூட்டு பங்களிப்பு மற்றும் உங்கள் பங்களிப்பு",
+	"Speech recognition relies on \"machine-learning\" technology that requires large datasets that include diverse voices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative": "பேச்சறிதல் \"இயந்திர கற்றல்\" தொழில்நுட்பத்தை சார்ந்துள்ளது. இதற்கு பன்முகப்படுத்தப்பட்ட இந்திய குரல்கள் மற்றும் அதனுடன் தொடர்புடைய உரையை உள்ளடக்கிய தரவுத்தொகுப்புகளின் பெரிய தொகுப்புகள் தேவைப்படுகின்றன. போலோ இந்தியா மூலம், இந்த முயற்சியில் பயன்படுத்துவதற்காக, இந்திய குரல்களில் பேசப்படும் இந்திய மொழிகளின் மாறுபட்ட திறந்த களஞ்சியத்தை நாங்கள் உருவாக்க விரும்புகிறோம்.",
+	"This is where you come in.": "நீங்கள் பங்களிக்கப்போவது இங்குதான்",
+	"We are inviting you to join us and voluntarily contribute your voice to this initiative. Recording your voice at one stretch can be overwhelming hence you can do this by visiting the website multiple times and commence from where you left us off": "எங்கள் குழுவிற்காக, எங்களுடன் சேர்ந்து, இந்த முயற்சிக்கு உங்கள் குரலின் மூலம் தன்னார்வத்துடன் பங்களிக்குமாறு நாங்கள் உங்களை அழைக்கிறோம். உங்கள் குரலை ஒரே மூச்சில் பதிவு செய்வது திணரடிப்பதாக இருக்கலாம், எனவே, நீங்கள் எங்களை வலைத்தளத்திற்கு பலமுறை வந்து, விட்டுச் சென்ற இடத்திலிருந்து தொடரலாம்.",
+	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "உங்கள் பங்களிப்பின் ஒவ்வொரு நிமிடமும் மிகப்பெரிய வித்தியாசத்தை ஏற்படுத்தும், மேலும் எங்கள் இலக்கை நெருங்கச் செய்யும்",
+	"Select a language": "ஒரு மொழியைத் தேர்ந்தெடுக்கவும்",
+	"START CONTRIBUTING": "பங்களிக்கத் தொடங்குங்கள்",
+	"ABOUT THE ORGANISATION": "நிறுவனத்தைப் பற்றி",
+	"EkStep Foundation": "ஏக்ஸ்டெப் அறக்கட்டளை",
+	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "ஏக்ஸ்டெப் அறக்கட்டளை கூட்டாளர்களைச் சேகரித்து, சிக்கலான சமூக சிக்கல்களைத் தீர்க்க திறந்த உள்கட்டமைப்பு, கருவிகள் மற்றும் கட்டமைப்பை உருவாக்குகிறது. சன்பேர்ட் என்று அழைக்கப்படும் திறந்த மூல டிஜிட்டல் உள்கட்டமைப்பை மேம்படுத்துவதன் மூலமும், சமூக இயங்குதள அணுகுமுறை எனப்படும் சிந்தனை மற்றும் செயலைப் பின்பற்றுவதன் மூலமும் இதைச் செய்கிறோம்.",
+	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "ஏக்ஸ்டெப் என்பது ரோஹிணி மற்றும் நந்தன் நிலேகனி மற்றும் சங்கர் மருவாடா ஆகியோரால் நிறுவப்பட்ட ஒரு லாப நோக்கற்ற அமைப்பாகும்.",
+	"All Languages": "எல்லா மொழிகள்",
+	"Data Last Updated": "தரவு கடைசியாக புதுப்பிக்கப்பட்ட நேரம்",
+	"We do not have any data for this language, would you like to contribute for it?": "இந்த மொழிக்கான எந்த தரவுமே எங்களிடம் இல்லை, நீங்கள் இதற்காக பங்களிக்க விரும்புகிறீர்களா?",
+	"Contribute Now": "இப்போது பங்களிக்கவும்",
+	"hours validated": "சரிபார்க்கப்பட்ட மணிநேரம்",
+	"Progress Chart": "முன்னேற்ற விளக்கப்படம்",
+	"Monthly": "மாதாந்திர",
+	"Quarterly": "காலாண்டு",
+	"Gender Distribution": "பாலின பகிர்மானம்",
+	"State Wise distribution": "மாநில வாரியான பகிர்மானம்",
+	"Age Group Distribution": "வயது குழு பகிர்மானம்"
 }
