| Priyanshu | added translation for validation page

--- a/locales/ta.json
+++ b/locales/ta.json
@@ -4,8 +4,8 @@
 	"hours": "மணிநேரங்கள்",
 	"minutes": "நிமிடங்கள்",
 	"seconds": "",
-	"social sharing text with rank": "",
-	"social sharing text without rank": "",
+	"social sharing text with rank": "<a>Http://boloindia.nplt.in</a> இல் இந்தியாவுக்கான திறந்த மொழி களஞ்சியத்தை உருவாக்குவதில் நான் பங்களித்துள்ளேன். நம் குரல்கள் மூலம் பங்களித்து, மெஷின்கள் நம் மொழியைக் கற்பதற்கு உதவுவதில், நீங்களும் நானும் நிச்சயமாக ஒரு வித்தியாசத்தை உருவாக்க முடியும். உங்கள் மொழியை மேம்படுத்த, உங்கள் பங்களிப்பை தருகிறீர்களா?",
+	"social sharing text without rank": "<a>Http://boloindia.nplt.in</a> இல் இந்தியாவுக்கான திறந்த மொழி களஞ்சியத்தை உருவாக்குவதில் நான் பங்களித்துள்ளேன். நம் குரல்கள் மூலம் பங்களித்து, மெஷின்கள் நம் மொழியைக் கற்பதற்கு உதவுவதில், நீங்களும் நானும் நிச்சயமாக ஒரு வித்தியாசத்தை உருவாக்க முடியும். போலோ இந்தியாவில் நம் %language மொழியின் தரவரிசை %rank ஆக உள்ளது. உங்கள் மொழியை மேம்படுத்த, உங்கள் பங்களிப்பை தருகிறீர்களா?",
 	"Language": "தமிழ்",
 	"Speech Recognition Models": "Speech Recognition Models",
 	"About Us": "எங்களை பற்றி",
@@ -130,5 +130,35 @@
 	"Quarterly": "காலாண்டு",
 	"Gender Distribution": "பாலின பகிர்மானம்",
 	"State Wise distribution": "மாநில வாரியான பகிர்மானம்",
-	"Age Group Distribution": "வயது குழு பகிர்மானம்"
+	"Age Group Distribution": "வயது குழு பகிர்மானம்",
+	"Thank you for contributing!": "பங்களித்ததற்கு நன்றி!",
+	"You are a champion": "நீங்கள் ஒரு சாம்பியன்",
+	"WooHoo!! You took the first important step": "சபாஷ்!! நீங்கள் முதல் முக்கிய படியை எடுத்துவிட்டீர்கள்",
+	"recordings contributed": "பதிவுகள் பங்களிக்கப்பட்டன",
+	"Share it with your friends and family": "இதை உங்கள் நண்பர்கள் மற்றும் குடும்பத்தினருடன் பகிரவும்",
+	"Did you know?": "உங்களுக்கு தெரியுமா?",
+	"Most data recorded for <span id=\"languageId\"></span>": "அதிக பங்களித்தது <span id=\"languageId\"></span> இல்",
+	"Data recorded for <span id=\"languageChoiceId\"></span>": "<span id=\"languageChoiceId\"></span> க்கான தரவு பதிவு செய்யப்பட்டது",
+	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "உங்கள் மொழியில் 100 மணிநேர இலக்கை அடைய உதவுங்கள். உங்களால் இன்னும் அதிகமாக செய்ய முடியும் என்று எங்களுக்குத் தெரியும்!",
+	"Contribute More": "மேலும் பங்களிக்கவும்",
+	"Instructions": "வழிமுறைகள்",
+	"Thank you for your enthusiasm to validate the recordings.": "பதிவுகளை சரிபார்ப்பதில் நீங்கள் காட்டிய உற்சாகத்திற்கு நன்றி.",
+	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "எங்களிடம் <span id=\"spn-validation-language\"></span> மொழியில் எந்த தரவும் இல்லை. பின்னர் மீண்டும் முயற்சிக்கவும்.",
+	"Would you also like to contribute your voice?": "உங்கள் குரலில் பங்களிக்க விரும்புகிறீர்களா?",
+	"Start Contributing in <span id=\"start-validation-language\"></span>": "<span id=\"start-validation-language\"></span> இல் பங்களிப்பைத் தொடங்கவும்",
+	"Thank you for validating!": "சரிபார்த்ததற்கு நன்றி!",
+	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> பதிவுகளை சரிபார்த்ததற்கு நன்றி",
+	"Validate More": "மேலும் சரிபார்க்கவும்",
+	"Incorrect": "தவறு",
+	"Play": "இயக்கு",
+	"Replay": "மறுபடி இயக்கு",
+	"Pause": "இடைநிறுத்தம்",
+	"Correct": "சரி",
+	"Skip": "தவிர்",
+	"Validating Instructions": "Validating Instructions",
+	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
+	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
+	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
+	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
+	"START": "START"
 }
