| Priyanshu | fix translation for report in hindi

--- a/locales/hi.json
+++ b/locales/hi.json
@@ -171,7 +171,7 @@
 	"Please test your <b>speakers</b>": "कृपया अपने <b>स्पीकर</b> चेक करें",
 	"Report": "रिपोर्ट करें",
 	"Report Content": "कॉन्टेंट की शिकायत करें",
-	"Help us understand what’s wrong with the sentence": "इस वाक्य क्या गलत है, इसे समझने में हमारी मदद करें",
+	"Help us understand what’s wrong with the sentence": "इस वाक्य में क्या गलत है, इसे समझने में हमारी मदद करें",
 	"Offensive": "अपमानजनक",
 	"Hurting sentiments of religion, community or abusive content etc.": "धर्म, समुदाय की भावनाओं को ठेस पहुँचाने वाला या बुरे बर्ताव वाला कॉन्टेंट",
 	"Prohibited Content": "ऐसा कॉन्टेंट जिस पर पाबंदी लगी है",
@@ -224,7 +224,7 @@
 	"Select the language for voluntary contribution": "Select the language for voluntary contribution",
 	"Please speak clearly": "Please speak clearly",
 	"Low/No Background Noise": "Low/No Background Noise",
-	"Background Noise Detected": "Background Noise Detected",
+	"Background Noise Detected": "बैकग्राउंड में शोर सुनाई दिया",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "आपका फ़ीडबैक बोलो इंडिया को आपके काम का ऐप्लिकेशन बनाए रखने में हमारी मदद करता है आपने अपना कीमती समय निकालकर फ़ीडबैक दिया, इसके लिए हम आपकी सराहना करते हैं",
 	"Congratulations! You have validated a batch of recordings!": "बधाई हो! आपके रिकॉर्डिंग के एक बैच की पुष्टि कर दी है।"
 }
