| Priyanshu | modified link of social media for Tamil

--- a/locales/ta.json
+++ b/locales/ta.json
@@ -4,8 +4,8 @@
 	"hours": "மணிநேரங்கள்",
 	"minutes": "நிமிடங்கள்",
 	"seconds": "",
-	"social sharing text with rank": "<a>Http://boloindia.nplt.in</a> இல் இந்தியாவுக்கான திறந்த மொழி களஞ்சியத்தை உருவாக்குவதில் நான் பங்களித்துள்ளேன். நம் குரல்கள் மூலம் பங்களித்து, மெஷின்கள் நம் மொழியைக் கற்பதற்கு உதவுவதில், நீங்களும் நானும் நிச்சயமாக ஒரு வித்தியாசத்தை உருவாக்க முடியும். உங்கள் மொழியை மேம்படுத்த, உங்கள் பங்களிப்பை தருகிறீர்களா?",
-	"social sharing text without rank": "<a>Http://boloindia.nplt.in</a> இல் இந்தியாவுக்கான திறந்த மொழி களஞ்சியத்தை உருவாக்குவதில் நான் பங்களித்துள்ளேன். நம் குரல்கள் மூலம் பங்களித்து, மெஷின்கள் நம் மொழியைக் கற்பதற்கு உதவுவதில், நீங்களும் நானும் நிச்சயமாக ஒரு வித்தியாசத்தை உருவாக்க முடியும். போலோ இந்தியாவில் நம் %language மொழியின் தரவரிசை %rank ஆக உள்ளது. உங்கள் மொழியை மேம்படுத்த, உங்கள் பங்களிப்பை தருகிறீர்களா?",
+	"social sharing text with rank": "https://boloindia.nplt.in இல் இந்தியாவுக்கான திறந்த மொழி களஞ்சியத்தை உருவாக்குவதில் நான் பங்களித்துள்ளேன். நம் குரல்கள் மூலம் பங்களித்து, மெஷின்கள் நம் மொழியைக் கற்பதற்கு உதவுவதில், நீங்களும் நானும் நிச்சயமாக ஒரு வித்தியாசத்தை உருவாக்க முடியும். உங்கள் மொழியை மேம்படுத்த, உங்கள் பங்களிப்பை தருகிறீர்களா?",
+	"social sharing text without rank": "https://boloindia.nplt.in இல் இந்தியாவுக்கான திறந்த மொழி களஞ்சியத்தை உருவாக்குவதில் நான் பங்களித்துள்ளேன். நம் குரல்கள் மூலம் பங்களித்து, மெஷின்கள் நம் மொழியைக் கற்பதற்கு உதவுவதில், நீங்களும் நானும் நிச்சயமாக ஒரு வித்தியாசத்தை உருவாக்க முடியும். போலோ இந்தியாவில் நம் %language மொழியின் தரவரிசை %rank ஆக உள்ளது. உங்கள் மொழியை மேம்படுத்த, உங்கள் பங்களிப்பை தருகிறீர்களா?",
 	"Language": "தமிழ்",
 	"Speech Recognition Models": "Speech Recognition Models",
 	"About Us": "எங்களை பற்றி",
