| Priyanshu | added translation on about us page for hindi

--- a/locales/hi.json
+++ b/locales/hi.json
@@ -82,7 +82,7 @@
 	"Contribute More": "अधिक योगदान दें",
 	"Share it with your friends and family": "इसे अपने दोस्तों और परिवार के साथ शेयर करें",
 	"Come Back again to<br />hit your goalpost": "अपने लक्ष्य को पूरा करने<br />के लिए वापस आएं",
-	"Terms and Conditions": "नियम एवं शर्तें",
+	"Terms and Conditions": "नियम और शर्तें",
 	"Terms of Use": "Terms of Use",
 	"Copyright & Licensing Notice": "Copyright & Licensing Notice",
 	"Instructions": "निर्देश",
@@ -147,7 +147,7 @@
 	"Transgender - She": "ट्रांसजेंडर - महिला",
 	"Rather Not Say": "बताना नहीं चाहते",
 	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "आगे बढ़ते हुए, आप हमारे <a href=\"/terms-and-conditions\">नियम और शर्तों</a> से सहमत होते हैं",
-	"Feedback": "प्रतिक्रिया",
+	"Feedback": "फ़ीडबैक",
 	"Quick Tips": "झटपट सलाह",
 	"Read once <b>before recording it</b>": "रिकॉर्ड करने से पहले पढ़ें",
 	"Test your Microphone and Speakers": "अपने माइक्रोफ़ोन और स्पीकर की जांच करें",
@@ -217,14 +217,15 @@
 	"Back to Home": "होम पेज पर वापस जाएं",
 	"Subject": "विषय",
 	"Description": "विवरण",
-	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.",
-	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.",
+	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "भारतीय भाषाओं में बोली पहचान के क्षेत्र में भारत को आत्मनिर्भर बनने की ज़रूरत है। इसलिए, हम कई प्रकार की भारतीय आवाज़ों का एक ओपन डेटा रिपॉज़िटरी बनाना चाहते हैं। इस मकसद को पूरा करने के लिए, \"बोलो इंडिया\" आपको अपनी आवाज़ का योगदान देने के लिए आमंत्रित करता है।",
+	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "इस ओपन डेटा का इस्तेमाल भाषा और टेक्नोलॉजी में दिलचस्पी रखने वाले सभी लोग विश्व स्तरीय बोली पहचान ऐप्लिकेशन तैयार करने में कर सकते हैं। ",
 	"social sharing text with rank": "मैंने https://boloindia.nplt.in पर भारत के लिए ओपन लैंग्वेज रिपॉज़िटरी बनाने में योगदान किया है। आप और मैं हमारी आवाज़ों का योगदान करके इस पहल में काफ़ी फ़र्क डाल सकते हैं जिससे मशीन को हमारी भाषा सीखने में मदद मिलती है। \"बोलो इंडिया\" पर हमारी %language भाषा का रैंक %rank है। अपनी भाषा को सशक्त बनाने में अपना योगदान देना चाहेंगे?",
 	"social sharing text without rank": "मैंने https://boloindia.nplt.in पर भारत के लिए ओपन लैंग्वेज रिपॉज़िटरी बनाने में योगदान किया है। आप और मैं हमारी आवाज़ों का योगदान करके इस पहल में काफ़ी फ़र्क डाल सकते हैं जिससे मशीन को हमारी भाषा सीखने में मदद मिलती है। अपनी भाषा को सशक्त बनाने में अपना योगदान देना चाहेंगे?",
 	"Select the language for voluntary contribution": "Select the language for voluntary contribution",
-	"Please speak clearly": "Please speak clearly",
+	"Please speak clearly": "कृपया स्पष्ट बोलें",
 	"Low/No Background Noise": "Low/No Background Noise",
 	"Background Noise Detected": "बैकग्राउंड में शोर सुनाई दिया",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "आपका फ़ीडबैक बोलो इंडिया को आपके काम का ऐप्लिकेशन बनाए रखने में हमारी मदद करता है आपने अपना कीमती समय निकालकर फ़ीडबैक दिया, इसके लिए हम आपकी सराहना करते हैं",
-	"Congratulations! You have validated a batch of recordings!": "बधाई हो! आपके रिकॉर्डिंग के एक बैच की पुष्टि कर दी है।"
+	"Congratulations! You have validated a batch of recordings!": "बधाई हो! आपके रिकॉर्डिंग के एक बैच की पुष्टि कर दी है।",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "आपका फ़ीडबैक बोलो इंडिया को आपके काम का ऐप्लिकेशन बनाए रखने में हमारी मदद करता है आपने अपना कीमती समय निकालकर फ़ीडबैक दिया, इसके लिए हम आपकी सराहना करते हैं"
 }
