--- a/locales/ta.json
+++ b/locales/ta.json
@@ -165,10 +165,10 @@
 	"Page Not Found": "தேடிய பக்கம் கிடைக்கவில்லை",
 	"Looks like you have taken a wrong turn here": "நீங்கள் இங்கே ஒரு தவறான திருப்பம் எடுத்தது போல தோன்றுகிறது",
 	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "முகப்புப் பக்கத்துக்கு செல்ல இங்கே என்னும் <a class=\"\" href=\"/\">இடத்தில் சொடுக்கவும்</a>",
-	"Subject": "Subject",
-	"Description": "Description",
-	"Please type here...": "Please type here...",
-	"Failed to submit the feedback. Please try again.": "Failed to submit the feedback. Please try again.",
+	"Subject": "பொருள்",
+	"Description": "விளக்கம்",
+	"Please type here...": "தயவுசெய்து இங்கே தட்டச்சு செய்க ...",
+	"Failed to submit the feedback. Please try again.": "கருத்தை சமர்ப்பிப்பதில் தோல்வி. தயவுசெய்து மீண்டும் முயற்சி செய்க.",
 	"Thank You for your valuable feedback": "உங்கள் மதிப்புமிக்க பின்னூட்டத்திற்காக நன்றி",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "உங்கள் பின்னூட்டம் போலோ இந்தியாவை அர்த்தமுள்ளதாக வைத்திருக்க உதவுகிறது, பின்னூட்டத்தை வழங்க நேரம் ஒதுக்கிய உங்களை பாராட்டுகிறோம்.",
 	"Back to Home": "மீண்டும் முகப்புப் பக்கத்திற்கு"
